--- a/src/backend-apis/CloudPharmacy.VerifiableCredentials.API/appsettings.json
+++ b/src/backend-apis/CloudPharmacy.VerifiableCredentials.API/appsettings.json
@@ -23,7 +23,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "VerifierAuthority": "",
     "CredentialManifest": "",
     "IssuanceRegistrationClientName": "Cloud Pharmacy",
-    "IssuanceRegistrationPurpose": "Prescription verification",
+    "IssuanceRegistrationPurpose": "Patient verification",
     "IssuanceCallbackUrl": "",
     "IssuanceCallbackApiKey": "api-key",
     "PresentationCallbackUrl": "",
